--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/'
+url:              'https://pillea.github.io'
+baseurl:          '/mscr_ma_blended_learning_2023'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
