--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            Jekyll Gitbook
+title:            MSCR MA Blended Learning
 longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+author:           Phil Max
+email:            kontakt@head-coaches.de
 description: >
   Build Jekyll site with the GitBook style.
 
