--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ longtitle:        Jekyll Gitbook
 author:           Phil Max
 email:            kontakt@head-coaches.de
 description: >
-  Build Jekyll site with the GitBook style.
+  MSCR 2023
 
 version:          1.0
 gitbook_version:  3.2.3
