Change page longtitle

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
 title:            MSCR MA Blended Learning
-longtitle:        Jekyll Gitbook
+longtitle:        MSCR MA Blended Learning
 author:           Phil Max
 email:            kontakt@head-coaches.de
 description: >
